// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`highlightChars match using matchesWrapper that return React elements 1`] = `
Array [
  "The quick ",
  <mark>
    brown
  </mark>,
  " fox jumps over the lazy dog",
]
`;

exports[`highlightChars match using matchesWrapper that return React elements 2`] = `
Array [
  <span>
    The quick 
  </span>,
  <mark>
    brown
  </mark>,
  <span>
     fox jumps over the lazy dog
  </span>,
]
`;

exports[`highlightMatches match using matchesWrapper that return React elements 1`] = `
Array [
  "The quick ",
  <mark>
    brown
  </mark>,
  " fox jumps over the lazy dog",
]
`;

exports[`highlightMatches match using matchesWrapper that return React elements 2`] = `
Array [
  <span>
    The quick 
  </span>,
  <mark>
    brown
  </mark>,
  <span>
     fox jumps over the lazy dog
  </span>,
]
`;
